--- a/report.html
+++ b/report.html
@@ -94,8 +94,60 @@
             <div class="template-three" id="template3" style="display: none">
               Template3
             </div>
-            <div class="template-four" id="template4" style="display: none">
-              Template4
+
+
+
+            <div class="template-four" id="template4" style="display: none;" >
+                <div class="t4top">
+                  <div class="t4month">
+                    <h1>Month</h1>
+                    <h2>year</h2>
+                  </div>
+                  <div class="t4heading">
+                    <h1>JAPANESE LANGUAGE</h1>
+                    <h1>TRAINING REPORT</h1>
+                  </div>
+                </div>
+
+                <div class="t4body">
+                  <div class="t4leftbody">
+                   <div class="t4batch"><h2>Batch 1</h2></div>
+                   <div class="t4trainee">
+                    <div class="traineedetails"></div>
+                    <div class="traineedetails"></div>
+                    <div class="traineedetails"></div>
+                    <div class="traineedetails"></div>
+                    <div class="traineedetails"></div>
+                    <div class="traineedetails"></div>
+                   </div>
+                  </div>
+                  <div class="t4rightbody">
+                    <div class="graph"></div>
+                  </div>
+                </div>
+
+                <div class="t4tablediv">
+                  <div class="t4tableleftdiv"> 
+                    <!-- add table details here -->
+                     <p><h3>Trainee grade displaying here </h3></p>
+                    <div class="grade">
+                      .
+                     <div class="gradeexp"><h2>A(90-100)</h2></div>
+                     <div class="gradeexp"><h2>B(80-89)</h2></div>
+                     <div class="gradeexp"><h2>C(70-79)</h2></div>
+                     <div class="gradeexp"><h2>D(60-69)</h2></div>
+                     <div class="gradeexp"><h2>E(< 59-Failed)</h2></div>
+                    </div>
+
+
+                  </div>
+                  <div class="t4tablerightdiv">
+                    <div class="t4table">
+<!-- draw table here -->
+                    </div>
+                  </div>
+
+                </div>
             </div>
           </div>
         </div>
